fix automaticCleanupBuildPlans()