@@ -169,6 +169,9 @@ public class ProgrammingExerciseTestService {
     private UrlService urlService;
 
     @Autowired
+    private ProgrammingExerciseStudentParticipationTestRepository programmingExerciseParticipationTestRepository;
+
+    @Autowired
     private ProgrammingExerciseStudentParticipationRepository programmingExerciseStudentParticipationRepository;
 
     @Autowired
@@ -1824,6 +1827,10 @@ public class ProgrammingExerciseTestService {
         String testPrefix = "cleanup";
         userUtilService.addUsers(userPrefix + testPrefix, 12, 0, 0, 0);
 
+        // this is needed so that the participations that are currently in the repository get ignored by findAllWithBuildPlanIdWithResults().
+        // Otherwise participations with an unexpected buildPlanId are retrieved when calling cleanupBuildPlansOnContinuousIntegrationServer() below
+        programmingExerciseParticipationTestRepository.updateBuildPlanIdOfAll(null);
+
         exercise = programmingExerciseRepository.save(exercise);
         examExercise = programmingExerciseRepository.save(examExercise);
 
@@ -1866,10 +1873,9 @@ public class ProgrammingExerciseTestService {
         var participation8b = createProgrammingParticipationWithSubmissionAndResult(exercise4, testPrefix + "student12", 100D, ZonedDateTime.now().minusDays(6), true);
 
         programmingExerciseStudentParticipationRepository.saveAll(Set.of(participation3a, participation3b, participation5b, participation6b));
-
-        await().untilAsserted(() -> assertThat(programmingExerciseStudentParticipationRepository.findAllWithBuildPlanIdWithResults())
-                .containsExactlyInAnyOrderElementsOf(Arrays.asList(participation1a, participation1b, participation2a, participation2b, participation3a, participation3b,
-                        participation4b, participation7a, participation7b, participation8b)));
+        await().untilAsserted(
+                () -> assertThat(programmingExerciseStudentParticipationRepository.findAllWithBuildPlanIdWithResults()).containsExactlyInAnyOrderElementsOf(List.of(participation1a,
+                        participation1b, participation2a, participation2b, participation3a, participation3b, participation4b, participation7a, participation7b, participation8b)));
 
         mockDelegate.mockDeleteBuildPlan(exercise.getProjectKey(), exercise.getProjectKey() + "-" + participation1a.getParticipantIdentifier().toUpperCase(), false);
         mockDelegate.mockDeleteBuildPlan(exercise.getProjectKey(), exercise.getProjectKey() + "-" + participation2a.getParticipantIdentifier().toUpperCase(), false);
